internationalization: loading bundles according to application Locale