@@ -5,7 +5,6 @@ package net.sourceforge.fenixedu.presentationTier.Action.teacher;
 
 import java.util.ArrayList;
 import java.util.Calendar;
-import java.util.Collection;
 import java.util.Collections;
 import java.util.Iterator;
 import java.util.List;
@@ -32,18 +31,17 @@ import net.sourceforge.fenixedu.dataTransferObject.finalDegreeWork.InfoProposal;
 import net.sourceforge.fenixedu.dataTransferObject.finalDegreeWork.InfoScheduleing;
 import net.sourceforge.fenixedu.domain.DegreeCurricularPlan;
 import net.sourceforge.fenixedu.domain.ExecutionDegree;
+import net.sourceforge.fenixedu.domain.ExecutionYear;
 import net.sourceforge.fenixedu.domain.degree.DegreeType;
 import net.sourceforge.fenixedu.domain.finalDegreeWork.Scheduleing;
 import net.sourceforge.fenixedu.framework.factory.ServiceManagerServiceFactory;
 import net.sourceforge.fenixedu.presentationTier.Action.base.FenixDispatchAction;
 import net.sourceforge.fenixedu.presentationTier.Action.exceptions.ExistingActionException;
 import net.sourceforge.fenixedu.presentationTier.Action.exceptions.FenixActionException;
-import net.sourceforge.fenixedu.presentationTier.Action.publico.FinalDegreeWorkProposalsDispatchAction;
 import net.sourceforge.fenixedu.presentationTier.Action.sop.utils.ServiceUtils;
 import net.sourceforge.fenixedu.presentationTier.Action.sop.utils.SessionConstants;
 import net.sourceforge.fenixedu.presentationTier.Action.sop.utils.SessionUtils;
 import net.sourceforge.fenixedu.presentationTier.Action.utils.CommonServiceRequests;
-import net.sourceforge.fenixedu.util.PeriodState;
 
 import org.apache.commons.beanutils.BeanComparator;
 import org.apache.commons.collections.CollectionUtils;
@@ -230,31 +228,28 @@ public class FinalWorkManagementAction extends FenixDispatchAction {
 		finalWorkForm.set("responsibleCreditsPercentage", "100");
 		finalWorkForm.set("coResponsibleCreditsPercentage", "0");
 
-		final List infoExecutionYears = CommonServiceRequests
-				.getInfoExecutionYears();
-		final Collection transformedInfoExecutionYears = CollectionUtils
-				.collect(
-						infoExecutionYears,
-						new FinalDegreeWorkProposalsDispatchAction().new INFO_EXECUTION_YEAR_INCREMENTER());
-		request.setAttribute("infoExecutionYears", transformedInfoExecutionYears);
+		final List<InfoExecutionYear> infoExecutionYears = new ArrayList<InfoExecutionYear>();
+		for (final ExecutionYear executionYear : ExecutionYear.readNotClosedExecutionYears()) {
+		    infoExecutionYears.add(InfoExecutionYear.newInfoFromDomain(executionYear));
+		}
+		request.setAttribute("infoExecutionYears", infoExecutionYears);
 
 		final String executionYear = (String) finalWorkForm
 				.get("executionYear");
 		InfoExecutionYear infoExecutionYear = null;
 		if (executionYear == null || executionYear.length() == 0) {
-			infoExecutionYear = findCurrentExecutionDegree(infoExecutionYears);
+			infoExecutionYear = InfoExecutionYear.newInfoFromDomain(ExecutionYear.readCurrentExecutionYear());
 			if (infoExecutionYear != null) {
 				finalWorkForm.set("executionYear", infoExecutionYear
 						.getIdInternal().toString());
 			}
 		} else {
-			infoExecutionYear = findExecutionDegreeByID(infoExecutionYears,
-					new Integer(executionYear));
+			infoExecutionYear = InfoExecutionYear.newInfoFromDomain(rootDomainObject.readExecutionYearByOID(Integer.valueOf(executionYear)));
 		}
 
 		final List executionDegreeList = (List) ServiceUtils.executeService(
 				userView, "ReadExecutionDegreesByExecutionYearAndDegreeType",
-				new Object[] { executionYear, DegreeType.DEGREE });
+				new Object[] { infoExecutionYear.getYear(), DegreeType.DEGREE });
 		final BeanComparator name = new BeanComparator(
 				"infoDegreeCurricularPlan.infoDegree.nome");
 		Collections.sort(executionDegreeList, name);
@@ -307,32 +302,6 @@ public class FinalWorkManagementAction extends FenixDispatchAction {
 		}
 
 		return mapping.findForward("chooseDegreeForFinalWorkProposal");
-	}
-
-	private InfoExecutionYear findExecutionDegreeByID(
-			final List infoExecutionYears, final Integer executionYearId) {
-		for (final Iterator iterator = infoExecutionYears.iterator(); iterator
-				.hasNext();) {
-			final InfoExecutionYear infoExecutionYear = (InfoExecutionYear) iterator
-					.next();
-			if (executionYearId.equals(infoExecutionYear.getIdInternal())) {
-				return infoExecutionYear;
-			}
-		}
-		return null;
-	}
-
-	private InfoExecutionYear findCurrentExecutionDegree(
-			final List infoExecutionYears) {
-		for (final Iterator iterator = infoExecutionYears.iterator(); iterator
-				.hasNext();) {
-			final InfoExecutionYear infoExecutionYear = (InfoExecutionYear) iterator
-					.next();
-			if (infoExecutionYear.getState().equals(PeriodState.CURRENT)) {
-				return infoExecutionYear;
-			}
-		}
-		return null;
 	}
 
 	public ActionForward prepareFinalWorkInformation(ActionMapping mapping,
